<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light">

            <TextView
                android:id="@+id/update_photo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:layout_margin="10dp"
                android:text="@string/update_picture"
                android:textAlignment="center"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/update_photo_label"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_circle_outline_white_24dp" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="20dp"
                android:textColor="#FFF"
                android:layout_toRightOf="@id/image_product"
                android:layout_below="@id/update_photo_label"
                android:text="@string/product_name" />

            <EditText
                android:id="@+id/name_edit"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_product"
                android:layout_below="@id/update_photo_label"
                android:contentDescription="@string/product_name"
                android:inputType="textCapWords"
                android:textColor="#FFF"
                tools:text="Product Name" />

            <TextView
                android:id="@+id/supplierLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:textColor="#FFF"
                android:layout_toRightOf="@id/image_product"
                android:layout_below="@id/name_edit"
                android:text="@string/set_supplier" />

            <EditText
                android:id="@+id/supplier_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/image_product"
                android:layout_below="@id/name_edit"
                android:contentDescription="@string/set_supplier"
                android:inputType="textPersonName"
                tools:text="Supplier Name"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/set_product_price" />


        <EditText
            android:id="@+id/price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/set_product_price"
            android:inputType="numberDecimal"
            android:text="0"
            tools:text="INR 50" />

        <TextView
            android:id="@+id/inventoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/set_inventory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <Button
            android:id="@+id/decrement"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:text="-" />

        <EditText
            android:id="@+id/quantity_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="0" />

        <Button
            android:id="@+id/increment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="+" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/order"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/order_more"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@android:color/black"/>

            <Button
                android:id="@+id/save"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/update"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_orange_light" />
            <Button
                android:id="@+id/delete"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="15dp"
                android:background="@color/colorAccent"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
